# advent-of-code-2021

./: Cargo.toml  borrar
cpp/: Makefile  main  main.cpp
inputs/: day10_test.txt  day4_cartons.txt  test.txt
src/: contrib.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day14_copied.rs  day15.rs  day2_1.rs  day2_2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
