[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

[lib]
name="aoc"
path="src/lib.rs"

[[bin]]
name="day1"
path="src/day1.rs"

[[bin]]
name="day2_1"
path="src/day2_1.rs"

[[bin]]
name="day2_2"
path="src/day2_2.rs"

[[bin]]
name="day3"
path="src/day3.rs"

[[bin]]
name="day4"
path="src/day4.rs"

[[bin]]
name="day5"
path="src/day5.rs"

[[bin]]
name="day6"
path="src/day6.rs"

[[bin]]
name="day7"
path="src/day7.rs"

[[bin]]
name="day8"
path="src/day8.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
